--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "css": "postcss public/css/tailwind.css -o public/css/app.css"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "pug": "^3.0.2"
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "pug": "^3.0.2",
+    "sequelize": "^6.23.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.11",
