--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "css": "postcss public/css/tailwind.css -o public/css/app.css"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "pug": "^3.0.2",
     "sequelize": "^6.23.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.11",
-    "nodemon": "^2.0.20",
-    "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0",
-    "tailwindcss": "^3.1.8"
+    "nodemon": "^2.0.20"
   }
 }
