--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
