--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+BACKEND_URL=http://localhost
+PORT=3000
+
 # Configuracion de la base de datos
 DB_HOST = 'localhost'
 DB_USER = '------'
@@ -10,3 +13,10 @@ SEQUILIZE_SYNC = true
 # Ver las rutas 
 VIEW_ROUTES_LOG = true
 API_ROUTE_URL = '/api/v1'
+
+# EMAIL
+EMAIL_HOST = 
+EMAIL_PORT = 
+EMAIL_USER = 
+EMAIL_PASS = 
+EMAIL_FROM = 
