--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "db:seed": "node seeders/seed.js -i"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
